# axum-auth

./: .env.example  .gitignore  Cargo.toml  config.toml  custom_config.toml
src/: lib.rs  main.rs
src/core/: mod.rs
src/core/config/: mod.rs
src/core/env/: constants.rs  mod.rs  validator.rs  vars.rs
src/core/err/: mod.rs
src/core/types/: mod.rs
src/env/: constants.rs  mod.rs  validator.rs
src/err/: mod.rs
src/prelude/: mod.rs
src/strings/: env.rs  err.rs  mod.rs  postgres.rs
tests/: load.rs
