[package]
name = "axum_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
config = "0.15.4"
dotenvy = "0.15.7"
once_cell = "1.20.2"
serde = { version = "1.0.216", features = ["derive"] }
sqlx = {version = "0.8.2", features = [ "runtime-tokio", "tls-rustls-ring", "postgres" ] }
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = {version = "1.42.0", features = ['full']}

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.14.0"
